--- a/data/applications/openvino.yaml
+++ b/data/applications/openvino.yaml
@@ -4,7 +4,7 @@ spec:
   displayName: OpenVINO
   provider: Intel
   description: |-
-    OpenVINO toolkit facilitates the optimization of a deep learning model from a framework and deployment using an inference engine onto Intel hardware.
+    A toolkit to facilitates the optimization of a deep learning model from a framework and deployment using an inference engine onto Intel hardware.
   kfdefApplications: ['jupyterhub', 'notebook-images']
   img: images/openvino.svg
   category: Self managed
