--- a/data/docs/python-effective-pandas-tutorial.yaml
+++ b/data/docs/python-effective-pandas-tutorial.yaml
@@ -1,6 +1,6 @@
 metadata:
-  name: python-effective-pandas-how-to
-  type: how-to
+  name: python-effective-pandas-tutorial
+  type: tutorial
 spec:
   appName: anaconde-ce
   displayName: Data analysis in Python with Pandas
