Add RHOSAK tile

--- a/data/quickstarts/connect-rhosak-notebook-quickstart.yaml
+++ b/data/quickstarts/connect-rhosak-notebook-quickstart.yaml
@@ -4,7 +4,7 @@ metadata:
 spec:
   displayName: Connecting to Red Hat OpenShift Streams for Apache Kafka
   durationMinutes: 10
-  icon: ''
+  icon: 'images/red-hat.svg'
   description: This quick start will walk you through connecting to Red Hat Streams for Apache Kafka using Jupyter Notebooks
   introduction: |-
     ### This quick start shows you how to connect to Streams for Apache Kafka from a Jupyter notebook.
