Add ability to determine if self-managed ISVs are enabled.

--- a/data/applications/watson-studio.yaml
+++ b/data/applications/watson-studio.yaml
@@ -7,6 +7,7 @@ spec:
     Embed AI and machine learning into your business. Create custom models using your own data.
   kfdefApplications: []
   route: ''
+  csvName: 'ibm-cp-data-operator'
   img: images/ibm.svg
   docsLink: https://www.ibm.com/support/knowledgecenter/SSQNUZ_3.5.0/svc-welcome/wsl.html
   category: Self managed
