--- a/data/applications/seldon.yaml
+++ b/data/applications/seldon.yaml
@@ -6,8 +6,8 @@ spec:
   description: |-
     A specialist set of tools designed to simplify and accelerate the process of deploying and
     managing your machine learning models.
-  kfdefApplications: [odhseldon]
-  route: ''
+  csvName: seldon-deploy-operator
+  route: 'istio-ingressgateway'
   img: images/seldon.svg
   docsLink: https://deploy-v1-0.seldon.io/docs/
   category: Self managed
