--- a/data/applications/starburst.yaml
+++ b/data/applications/starburst.yaml
@@ -1,7 +1,7 @@
 metadata:
   name: starburst
 spec:
-  displayName: Starburst Enterprise
+  displayName: Starburst Galaxy
   provider: Starburst
   description: |-
     Starburst Galaxy is a fully-managed service to run high performance queries across your various data sources using SQL
