Updated anaconda getting started links based on partner recommendation

--- a/data/applications/anaconda-ce.yaml
+++ b/data/applications/anaconda-ce.yaml
@@ -13,5 +13,5 @@ spec:
   support: third party support
   docsLink: https://docs.anaconda.com/
   quickStart: ''
-  getStartedLink: https://docs.anaconda.com/anaconda-commercial/quickstart/
+  getStartedLink: https://anaconda.cloud/register?utm_source=redhat-rhods-summit  
 
