--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
 ODH_IS_PROJECT_ROOT_DIR=false
 ODH_PORT=${FRONTEND_PORT}
+DOC_LINK ='https://access.redhat.com/documentation/en-us/red_hat_openshift_data_science/1/html-single/getting_started_with_red_hat_openshift_data_science/'
+SUPPORT_LINK ='https://access.redhat.com/support/cases/#/case/new/open-case?caseCreate=true'
