--- a/data/applications/anaconda-ce.yaml
+++ b/data/applications/anaconda-ce.yaml
@@ -1,5 +1,5 @@
 metadata:
-  name: anaconde-ce
+  name: anaconda-ce
 spec:
   displayName: Anaconda Commercial Edition
   provider: Anaconda
@@ -13,5 +13,17 @@ spec:
   support: third party support
   docsLink: https://docs.anaconda.com/
   quickStart: ''
-  getStartedLink: https://anaconda.cloud/register?utm_source=redhat-rhods-summit  
-
+  getStartedLink: https://anaconda.cloud/register?utm_source=redhat-rhods-summit
+  enable:
+    title: Connect Anaconda to JupyterHub
+    actionLabel: Connect
+    description: ''
+    variables:
+      Anaconda_ce_key: password
+    variableDisplayText:
+      Anaconda_ce_key: Anaconda CE Key
+    variableHelpText:
+      Anaconda_ce_key: This key is given to you by Anaconda
+    validationJob: anaconda-ce-periodic-validator
+    validationSecret: anaconda-ce-access
+    validationConfigMap: anaconda-ce-validation-result
