--- a/data/docs/anaconda-tutorial.yaml
+++ b/data/docs/anaconda-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: anaconda-background
   type: tutorial
 spec:
-  appName: anaconde-ce
+  appName: anaconda-ce
   displayName: What is Anaconda?
   description: |-
     Learn about the Anaconda Distrbution and why Python is so frequently used for Data Science tasks.
