--- a/data/docs/python-interactive-visualization-tutorial.yaml
+++ b/data/docs/python-interactive-visualization-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: python-interactive-visualization-tutorial
   type: tutorial
 spec:
-  appName: anaconde-ce
+  appName: anaconda-ce
   displayName: Build interactive visualizations and dashboards in Python
   description: |-
     This tutorial will take you through all of the steps involved in exploring data of many different types and sizes, building simple and complex figures, working with billions of data points, adding interactive behavior, widgets and controls, and deploying full dashboards and applications.
