--- a/data/docs/python-visualization-tutorial.yaml
+++ b/data/docs/python-visualization-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: python-visualization-tutorial
   type: tutorial
 spec:
-  appName: anaconde-ce
+  appName: anaconda-ce
   displayName: Python tools for data visualization
   description: |-
     The PyViz.org website is an open platform for helping users decide on the best open-source (OSS) Python data visualization tools for their purposes, with links, overviews, comparisons, and examples.
