--- a/data/applications/seldon.yaml
+++ b/data/applications/seldon.yaml
@@ -7,7 +7,9 @@ spec:
     A specialist set of tools designed to simplify and accelerate the process of deploying and
     managing your machine learning models.
   csvName: seldon-deploy-operator
+  routeNamespace: 'istio-system'
   route: 'istio-ingressgateway'
+  routeSuffix: 'seldon-deploy/deployments?ns=seldon'
   img: images/seldon.svg
   docsLink: https://deploy-v1-0.seldon.io/docs/
   category: Self-managed
