updated seldon and watson how-do-i to how-to texts

--- a/data/docs/watson-studio-create-deployment-space-how-to.yaml
+++ b/data/docs/watson-studio-create-deployment-space-how-to.yaml
@@ -3,7 +3,7 @@ metadata:
   type: how-to
 spec:
   appName: watson-studio
-  displayName: How do I create a deployment space for deploying my model?
+  displayName: How to create a deployment space for deploying my model?
   description: |-
     Steps to create a deployment space
   url: https://www.ibm.com/support/knowledgecenter/SSQNUZ_3.5.0/wsj/analyze-data/ml-spaces_local.html
