--- a/data/docs/seldon-operational-tasks-how-to.yaml
+++ b/data/docs/seldon-operational-tasks-how-to.yaml
@@ -2,7 +2,7 @@ metadata:
   name: seldon-operation-tasks-how-to
   type: how-to
 spec:
-  displayName: Operational Tasks
+  displayName: How to perform operational tasks?
   appName: seldon-deploy
   description: |-
     Best practices for managing a Seldon Deploy cluster.
