--- a/data/docs/watson-studio-cleanse-shape-visualize-how-to.yaml
+++ b/data/docs/watson-studio-cleanse-shape-visualize-how-to.yaml
@@ -3,7 +3,7 @@ metadata:
   type: how-to
 spec:
   appName: watson-studio
-  displayName: How do I cleanse, shape, and visualize my data?
+  displayName: How to cleanse, shape, and visualize my data?
   description: |-
     Using data refinery to cleanse and shape tabular data
   url: https://www.ibm.com/support/knowledgecenter/SSQNUZ_3.5.0/wsj/refinery/refining_data.html
