--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,8 +12,9 @@
     "paths": {
       "*": [
         "node_modules/*",
-        "src/types/*"
-      ]
+        "src/types/*",
+      ],
+      "@common/*": ["../common/*"]
     }
   },
   "include": [
