--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,7 @@
 
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
@@ -8,13 +9,10 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "baseUrl": ".",
     "paths": {
       "*": [
         "node_modules/*",
-        "src/types/*",
       ],
-      "@common/*": ["../common/*"]
     }
   },
   "include": [
