Reviewed application descriptions for langauge errors.
Reviewed getting started content for language and formatting errors.

Reviewing data/docs files. Made card descriptions and titles more consistent, renamed two Watson Studio tutorials (Github changed to Git to be more accurate to the contents, cleanse changed to clean to use simpler language), removed lingering question marks from previous how-do-i titles.

Reviewed anaconda notebook quickstart

Reviewed connect-rhosak quickstart and made some consistency adjustments to anaconda quickstart.

Corrected use of repeated contractions in all modules, edited jupyter notebook quickstart.

Reviewed python model quickstart, corrected registered trademark symbol usage in previous quickstarts, added prerequisite to install RHOSAK

Basic review of watson deploy quickstart as I don't have access to Watson

Basic review of openvino and seldon canary deploy quick starts

Reviewed seldon drift quick start but the language in this one was pretty obscure. Did my best to clean it up.

Finished initial review of seldon tutorials

performance improvements for resource watching (#74)

chore(build): npm install if missing any one cache (#75)

Fix unnecessary redraws, add watch for enablement of ISVs (#76)

Squashing commits and rebasing after CCS review.

--- a/data/applications/openvino.yaml
+++ b/data/applications/openvino.yaml
@@ -4,7 +4,7 @@ spec:
   displayName: OpenVINO
   provider: Intel
   description: |-
-    A toolkit to facilitates the optimization of a deep learning model from a framework and deployment using an inference engine onto Intel hardware.
+    A toolkit to facilitate the optimization of a deep learning model from a framework and deployment using an inference engine onto Intel hardware.
   kfdefApplications: []
   img: images/openvino.svg
   category: Self managed
