--- a/data/docs/jupyterhub-update-server-settings-how-to.yaml
+++ b/data/docs/jupyterhub-update-server-settings-how-to.yaml
@@ -5,6 +5,6 @@ spec:
   displayName: How to update notebook server settings
   appName: jupyterhub
   description: |-
-    Learn how to restart your notebook server with a different notebook image.
+    Update the settings or the notebook image on your notebook server.
   url: https://access.redhat.com/documentation/en-us/red_hat_openshift_data_science/1/html-single/how_to_update_notebook_server_settings/index
   durationMinutes: 15
