--- a/data/docs/python-effective-pandas-tutorial.yaml
+++ b/data/docs/python-effective-pandas-tutorial.yaml
@@ -5,6 +5,6 @@ spec:
   appName: anaconda-ce
   displayName: Data analysis in Python with Pandas
   description: |-
-    This series is about how to make effective use of pandas, a data analysis library for the Python programming language. It's targeted at an intermediate level: people who have some experience with pandas, but are looking to improve.
+    Learn how to make effective use of pandas, a data analysis library for the Python programming language. This series is targeted at an intermediate level: people who have some experience with pandas, but are looking to improve.
   url: https://github.com/TomAugspurger/effective-pandas
   durationMinutes: 90
