--- a/data/docs/watson-studio-runtime-env-how-to.yaml
+++ b/data/docs/watson-studio-runtime-env-how-to.yaml
@@ -3,8 +3,8 @@ metadata:
   type: how-to
 spec:
   appName: watson-studio
-  displayName: What are my choices for notebook runtime environments?
+  displayName: How to choose between notebook runtime environment options
   description: |-
-    How to configure a notebook runtime environment.
+    Understand the options available when you configure a notebook runtime environment.
   url: https://www.ibm.com/support/knowledgecenter/SSQNUZ_3.5.0/wsj/analyze-data/notebook-environments.html
   durationMinutes: 5
