--- a/data/docs/anaconda-tutorial.yaml
+++ b/data/docs/anaconda-tutorial.yaml
@@ -5,6 +5,6 @@ spec:
   appName: anaconda-ce
   displayName: What is Anaconda?
   description: |-
-    Learn about the Anaconda Distrbution and why Python is so frequently used for Data Science tasks.
+    Learn about the Anaconda Distrbution and why Python is so frequently used for data science tasks.
   url: https://anaconda.org/training/anaconda_introduction/notebook
   durationMinutes: 5
