--- a/data/docs/jupyter-notebooks-in-watson-studio-tutorial.yaml
+++ b/data/docs/jupyter-notebooks-in-watson-studio-tutorial.yaml
@@ -3,7 +3,7 @@ metadata:
   type: tutorial
 spec:
   appName: watson-studio
-  displayName: Jupyter Notebooks in Watson Studio
+  displayName: Using Jupyter notebooks in Watson Studio
   description: |-
     This video covers the basics for working with Jupyter notebooks in Watson Studio.
   url: https://video.ibm.com/channel/23952663/video/cpd35-ws-notebook-basics
