--- a/data/docs/jupyterhub-use-s3-bucket-data-how-to.yaml
+++ b/data/docs/jupyterhub-use-s3-bucket-data-how-to.yaml
@@ -5,6 +5,6 @@ spec:
   displayName: How to use data from Amazon S3 buckets
   appName: jupyterhub
   description: |-
-    Connect to Data in S3 Storage using environment variables.
+    Connect to data in S3 Storage using environment variables.
   url: https://access.redhat.com/documentation/en-us/red_hat_openshift_data_science/1/html-single/how_to_use_data_from_amazon_s3_buckets/index
   durationMinutes: 15
