--- a/data/docs/openvino-toolkit-ovms-serving.yaml
+++ b/data/docs/openvino-toolkit-ovms-serving.yaml
@@ -3,10 +3,10 @@ metadata:
   type: how-to
 spec:
   featureFlag: openvino
-  displayName: How do I serve a model using OpenVINO Model Server?
+  displayName: How to serve a model using OpenVINO Model Server
   appName: openvino
   description: |-
-    Shows how to use OpenVINO custom resources to deploy optimized models with OpenVINO model server.
+    Deploy optimized models with OpenVINO Model Server using OpenVINO custom resources.
 
   url: https://github.com/openvinotoolkit/model_server/tree/main/extras/ovms-operator
   durationMinutes: 10
