--- a/data/docs/watson-studio-load-data-how-to.yaml
+++ b/data/docs/watson-studio-load-data-how-to.yaml
@@ -3,8 +3,8 @@ metadata:
   type: how-to
 spec:
   appName: watson-studio
-  displayName: How to load data into Notebook?
+  displayName: How to load data into Notebook
   description: |-
-    How to integrate data sources into a notebook.
+    Learn how to integrate data sources into a Jupyter notebook.
   url: https://www.ibm.com/support/knowledgecenter/SSQNUZ_3.5.0/wsj/analyze-data/load-and-access-data.html
   durationMinutes: 5
