--- a/data/quickstarts/anaconda-ce-create-jupyter-notebook-quickstart.yaml
+++ b/data/quickstarts/anaconda-ce-create-jupyter-notebook-quickstart.yaml
@@ -5,52 +5,52 @@ spec:
   displayName: Creating an Anaconda-enabled Jupyter notebook
   durationMinutes: 5
   icon: 'images/anaconda-ce.svg'
-  description: This quick start will walk you through creating an Anaconda-enabled Jupyter notebook.
+  description: A quick step-by-step guide to creating an Anaconda-enabled Jupyter notebook.
   introduction: |-
     ### This quick start shows you how to create an Anaconda-enabled Jupyter notebook.
     Red Hat® OpenShift® Data Science lets you run Jupyter notebooks on our Red Hat® OpenShift Dedicated environment.
 
-    With Anaconda Commercial edition you can access and use Anaconda packages, curated for security and compatibility.
+    With Anaconda Commercial edition you can access and use Anaconda packages that are curated for security and compatibility.
 
     This quick start will get you working in a notebook in just a few minutes.
   tasks:
     - title: Launch JupyterHub
       description: |-
         ### To find the JupyterHub Launch action:
-        1. In the **Applications** menu item, go to **Enabled** projects.
-        2. Find the JupyterHub entry.
-        3. Click **Launch** on the JupyterHub card to access the JupyterHub Spawner.
+        1. Click **Applications** &#x2192; **Enabled**.
+        2. Find the JupyterHub card.
+        3. Click **Launch** on the JupyterHub card to access the JupyterHub **Start a notebook server** page.
 
-        A new browser tab will open displaying the JupyterHub Spawner.
+        A new browser tab will open displaying the **Start a notebook server** page.
       review:
         instructions: |-
-          #### To verify you have launched the JupyterHub Spawner:
-          Is a new browser tab visible that reads Spawner Options?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+          #### To verify you have launched JupyterHub:
+          Is a new **JupyterHub** browser tab visible with the **Start a notebook server** page open?
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
-        success: You have launched the Jupyter Spawner application!
+        success: You have launched JupyterHub.
         failed: Try the steps again.
-    - title: Spawn an environment
+    - title: Configure and start an environment
       description: |-
-        ### Spawning an environment:
+        ### Configure and start an environment:
         1. Select the Anaconda notebook image from the dropdown menu. This notebook uses Anaconda for all its packages, including Python.
         2. Select a container size; small, medium or large based on your computation needs.
-        3. Click the Start button.
+        3. Click the **Start** button.
 
-        The Spawner Options page will reload and indicate that the system is starting up.  Once the page displays a stop option you may proceed to the next step.
+        The page will reload and indicate that the system is starting up.
       review:
         instructions: |-
           #### To verify that you have launched the Jupyter notebook:
-          Do you see an visual on the Spawner options screen that says the server is running?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+          Do you see a message in the page that says **The server is starting up**?
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
-        success: You have verified that the Jupyter Spawner has started!
+        success: Your server has started and the JupyterLab interface will load shortly. When the page displays a **Stop** option, proceed to the next step.
         failed: Try the steps again.
     - title: Create your first notebook
       description: |-
         ### To create a notebook, follow these steps:
-        1. In the JupyterHub File menu, click File-> New -> Notebook
-        2. Choose Python 3 and press select when prompted to select a kernel.
+        1. In the JupyterLab interface, click **File** &#x2192; **New** &#x2192; **Notebook**.
+        2. In the **Select Kernel** dialog, select **Python 3** and click **Select**.
 
         You have now launched a Jupyter notebook and can begin writing Python.
       review:
@@ -58,24 +58,23 @@ spec:
           #### Verify that your Jupyter notebook launched with a Python 3 kernel:
           Is Python 3 displaying in the upper right notification bar of your notebook?
         failedTaskHelp:
-          This task isn’t verified yet. Try the task again.
+          This task is not verified yet. Try the task again.
       summary:
-        success: You have a running Jupyter notebook
+        success: You have a running Jupyter notebook.
         failed: Try the steps again.
     - title: Ensure you are subscribed to use Anaconda Commercial Edition packages.
       description: |-
         ### To verify that you are subscribed to Anaconda Commercial Edition in the notebook, follow these steps:
         1. In a notebook cell, type and run `!conda token set $ANACONDA_TOKEN` (replacing $ANACONDA_TOKEN with your own Anaconda Commercial Edition token.)
-        1. Run `!conda info` in a notebook cell. 
+        1. Run `!conda info` in a notebook cell.
       review:
         instructions: |-
           #### Verify that your Anaconda package manager points to the right repositories
-          Do the repositories in `conda info` point to repo.anaconda.cloud instead of repo.anaconda.com?
+          Do the repositories in `conda info` point to `repo.anaconda.cloud` instead of `repo.anaconda.com`?
         failedTaskHelp:
-          This task isn’t verified yet. Try the task again.
+          This task is not verified yet. Try the task again.
       summary:
-        success: You have successfully subscribed to Anaconda Commercial Edition
+        success: You have successfully subscribed to Anaconda Commercial Edition.
         failed: Try the steps again.
-  conclusion: You are now able to install Anaconda Commercial Edition packages within your Jupyter notebook using the command `conda install $PACKAGE`.  If you want to learn how to deploy
-    a model, take the next quick start.
+  conclusion: You are now able to install Anaconda Commercial Edition packages within your Jupyter notebook using the command `conda install $PACKAGE`.  If you want to learn how to deploy a model, take the next quick start.
   nextQuickStart: [deploy-python-model]
