--- a/data/quickstarts/connect-rhosak-notebook-quickstart.yaml
+++ b/data/quickstarts/connect-rhosak-notebook-quickstart.yaml
@@ -5,15 +5,17 @@ spec:
   displayName: Connecting to Red Hat OpenShift Streams for Apache Kafka
   durationMinutes: 10
   icon: 'images/red-hat.svg'
-  description: This quick start will walk you through connecting to Red Hat Streams for Apache Kafka using Jupyter Notebooks.
+  description: A quick step-by-step guide to connecting to Red Hat Streams for Apache Kafka from a Jupyter notebook.
+#TODO: please verify syntax and appropriateness.
+#  prerequisites: [Ensure that Red Hat OpenShift Streams for Apache Kafka is installed on your Red Hat OpenShift Dedicated cluster.]
   introduction: |-
     ### This quick start shows you how to connect to Streams for Apache Kafka from a Jupyter notebook.
-    Welcome to the Red Hat OpenShift Streams for Apache Kafka quick start
+    Welcome to the Red Hat OpenShift Streams for Apache Kafka quick start.
   tasks:
-    - title: Obtain Kafka Credentials from the Streams for Apache Kafka dashboard
+    - title: Obtain Kafka credentials from the Streams for Apache Kafka dashboard
       description: |-
         ### To obtain connection information to Streams for Apache Kafka:
-        1. In the **Streams for Apache Kafka** page of the web console, on the right side of the relevant Kafka instance, select the options icon (three vertical dots) and click **Connect to instance**.
+        1. In the **Streams for Apache Kafka** page of the web console, on the right side of the relevant Kafka instance, click *Options* (&#8942;) &#x2192; **Connect to instance**.
         2. In the **Connection** page, copy the **External server** endpoint to a secure location. This is the bootstrap server endpoint that your application requires to connect to the Kafka instance.
         3. Click **Generate service account** and copy the **Client ID** and **Client secret** to a secure location. Your application requires these credentials to authenticate the connection to the Kafka instance.
         4. After you save the generated credentials to a secure location, select the confirmation check box in the credentials window and close the window.
@@ -24,36 +26,36 @@ spec:
           Did you save the bootstrap server endpoint to a secure location?
 
           Did you save the client credentials to a secure location?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
-        success: You've obtained connection information for Kafka
+        success: You have obtained connection information for Kafka
         failed: Try the steps again.
 
-    - title: Launch JupyterHub from the RHODS dashboard
+    - title: Launch JupyterHub
       description: |-
         ### To find the JupyterHub Launch action:
-        1. In the **Applications** menu item, go to **Enabled** projects.
-        2. Find the **JupyterHub** entry.
-        3. Click **Launch** on the JupyterHub card to access the JupyterHub Spawner.
+        1. Click **Applications** &#x2192; **Enabled**.
+        2. Find the JupyterHub card.
+        3. Click **Launch** on the JupyterHub card to access the JupyterHub **Start a notebook server** page.
 
-        A new browser tab window will open displaying the JupyterHub Spawner.
+        A new browser tab will open displaying the **Start a notebook server** page.
       review:
         instructions: |-
-          #### To verify you have launched the JupyterHub Spawner:
-          Is a new browser tab visible that reads Spawner Options?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+          #### To verify you have launched JupyterHub:
+          Is a new **JupyterHub** browser tab visible with the **Start a notebook server** page open?
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
-        success: You have launched the Jupyter Spawner!
+        success: You have launched JupyterHub.
         failed: Try the steps again.
 
-    - title: Spawn an environment with variables
+    - title: Configure and start an environment with variables
       description: |-
-        ### Spawning an environment
-        1. Select a notebook image from the dropdown menu.
+        ### Configure and start an environment with variables for Kafka:
+        1. Select a notebook image from the options provided.
         2. Select a container size based on your computation needs.
-        3. Under Environment variables click **Add**
-        4. For variable name enter `KAFKA_BOOTSTRAP_SERVER`
-        5. For **variable value** enter the value for the Kafka **External server** obtained from the Streams for Apache Kafka connection information.
+        3. Under **Environment variables** click **Add**
+        4. For **variable name** enter `KAFKA_BOOTSTRAP_SERVER`
+        5. For **variable value** enter the value for the Kafka **External server** that you obtained from the Streams for Apache Kafka connection information.
         `KAFKA_BOOTSTRAP_SERVER: <External server>`
         6. Add another variable by repeating steps 3-5.
         `KAFKA_USERNAME: <Client ID>`
@@ -61,35 +63,35 @@ spec:
         `KAFKA_PASSWORD: <Client secret>`
         8. Click the **Start** button.
 
-        The Spawner Options page will reload and indicate that the system is starting up.
+        The **Start a notebook server** page will reload and indicate that the system is starting up.
       review:
         instructions: |-
           #### To verify that you have launched the Jupyter notebook:
-          Do you see an visual on the Spawner options screen that says the server is running?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+          Do you see a message in the page that says **The server is starting up**?
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
-        success: You have started a Jupyter notebook server.
+        success: Your server has started and the JupyterLab interface will load shortly. When the page displays a **Stop** option, proceed to the next step.
         failed: Try the steps again.
 
     - title: Download examples of kafka-python consumers and producers
       description: |-
         ### Download kafka-python example notebooks:
-        You're ready to connect to Kafka.  To get started you can download some examples of consumers and producers in notebooks using `git clone`.
+        You are ready to connect to Kafka. To get started you can download some examples of consumers and producers in notebooks using `git clone`.
 
         To clone the notebook-examples repository using the Git plugin:
-        1. Click the Git icon on the left hand nav in JupyterLab
-        2. Click **Clone a Repository**
-        3. Enter `https://github.com/rh-aiservices-bu/notebook-examples.git`
-        4. Click Clone
+        1. Click the **Git** dropdown menu.
+        2. Click **Clone a Repository**.
+        3. Enter `https://github.com/rh-aiservices-bu/notebook-examples.git`.
+        4. Click **CLONE**.
 
         You should now have a **notebook-examples** directory.
       review:
         instructions: |-
           #### To verify the notebook-examples git repository cloned:
-          Open the file explorer using the folder icon on the left hand nav in JupyterLab.  Do you see an a folder named notebook-examples?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+          Check the file explorer pane in JupyterLab. Do you see a folder named **notebook-examples**?
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
-        success:  You have verified that the notebook-examples repository is cloned.
+        success: The notebook-examples repository was successfully cloned into your environment.
         failed:  Try the steps again.
 
     - title: Run examples of kafka-python consumers and producers
@@ -104,11 +106,11 @@ spec:
       review:
         instructions: |-
           #### To verify that messages are being sent/received:
-          In the output from the last cell in `2_kafka_consumer_print.ipynb`, you should see incoming messages printed.
+          Check the output from the last cell in `2_kafka_consumer_print.ipynb` and make sure there are incoming messages printed there.
         failedTaskHelp: Check the values of your environment variables and try the task again.
       summary:
-        success:  You're sending and receiving messages
+        success:  Your environment is now sending and receiving messages.
         failed:  Try the steps again.
 
-  conclusion:  Congratulations.  You're now sending and receiving messages using Red Hat OpenShift Streams for Apache Kafka
+  conclusion:  Congratulations! Your environment is now sending and receiving messages using Red Hat OpenShift Streams for Apache Kafka.
   nextQuickStart: []
