--- a/data/quickstarts/create-jupyter-notebook-quickstart.yaml
+++ b/data/quickstarts/create-jupyter-notebook-quickstart.yaml
@@ -8,7 +8,7 @@ spec:
   description: This quick start will walk you through creating a Jupyter notebook.
   introduction: |-
     ### This quick start shows you how to create a Jupyter notebook.
-    Red Hat® OpenShift® Data Scientist lets you run Jupyter notebooks on our Red Hat® OpenShift Dedicated environment.
+    Red Hat® OpenShift® Data Science lets you run Jupyter notebooks on our Red Hat® OpenShift® Dedicated environment.
 
     We have configured the JupyterHub spawner to support your amazing Data Scientist explorations and model deployments.
 
@@ -17,51 +17,50 @@ spec:
     - title: Launch JupyterHub
       description: |-
         ### To find the JupyterHub Launch action:
-        1. In the **Applications** menu item, go to **Enabled** projects.
-        2. Find the JupyterHub entry.
-        3. Click **Launch** on the JupyterHub card to access the JupyterHub Spawner.
+        1. Click **Applications** &#x2192; **Enabled**.
+        2. Find the JupyterHub card.
+        3. Click **Launch** on the JupyterHub card to access the JupyterHub **Start a notebook server** page.
 
-        A new browser tab window will open displaying the JupyterHub Spawner.
+        A new browser tab will open displaying the **Start a notebook server** page.
       review:
         instructions: |-
-          #### To verify you have launched the JupyterHub Spawner:
-          Is a new browser tab visible that reads Spawner Options?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+          #### To verify you have launched JupyterHub:
+          Is a new **JupyterHub** browser tab visible with the **Start a notebook server** page open?
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
-        success: You have launched the Jupyter Spawner!
+        success: You have launched JupyterHub.
         failed: Try the steps again.
-    - title: Spawn an environment
+    - title: Configure and start an environment
       description: |-
-        ### Spawning an environment:
-        1. Select a notebook image from the dropdown menu.
+        ### Configuring and starting an environment:
+        1. Select a notebook image from the options provided.
         2. Select a container size based on your computation needs.
         3. Click the **Start** button.
 
-        The Spawner Options page will reload and indicate that the system is starting up.
+        The **Start a notebook server** page will reload and indicate that the system is starting up.
       review:
         instructions: |-
           #### To verify that you have launched the Jupyter notebook:
-          Do you see an visual on the Spawner options screen that says the server is running?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+          Do you see a message in the page that says **The server is starting up**?
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
-        success: You have verified that the Jupyter Spawner has started!
+        success: Your server has started and the JupyterLab interface will load shortly. When the page displays a **Stop** option, proceed to the next step.
         failed: Try the steps again.
     - title: Create your first notebook
       description: |-
         ### To create a notebook, follow these steps:
-        1. Under the Notebook display click the Python 3 tile. 
-        2. When the new Jupyter notebook opens, verify that you see Python 3 in the upper right navigation bar.
+        1. In the **Launcher** tab, under the **Notebook** heading, click the **Python 3** tile.
+        2. When the new Jupyter notebook opens, verify that you see `Python 3` in the upper right navigation bar.
 
         You have now launched a Jupyter notebook and can begin writing Python.
       review:
         instructions: |-
           #### Verify that your Jupyter notebook launched with a Python 3 kernel:
-          Is Python 3 displaying in the upper right notification bar of your notebook?
+          Is `Python 3` displaying in the upper right notification bar of your notebook?
         failedTaskHelp:
-          This task isn’t verified yet. Try the task again.
+          This task is not verified yet. Try the task again.
       summary:
-        success: You have added health checks to your sample app!
+        success: You have created a Jupyter notebook with a Python 3 kernel!
         failed: Try the steps again.
-  conclusion: You are now able to launch Jupyter notebooks and write Python code.  If you want to learn how to deploy
-    a model, take the next quick start.
+  conclusion: You are now able to launch Jupyter notebooks and write Python code.  If you want to learn how to deploy a model written in Python, take the next quick start.
   nextQuickStart: [deploy-python-model]
