--- a/data/quickstarts/deploy-watson-model-quickstart.yaml
+++ b/data/quickstarts/deploy-watson-model-quickstart.yaml
@@ -2,7 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: build-deploy-watson-model
 spec:
-  displayName: Deploying a Model with Watson Studio
+  displayName: Deploying a model with Watson Studio
   durationMinutes: 15
   icon: 'images/ibm.svg'
   description: This quick start walks you through importing a Notebook in Watson Studio, building a model with AutoAI, and deploying a model.
@@ -12,30 +12,31 @@ spec:
     the IBM data and AI platform. Unite teams, simplify AI lifecycle management and accelerate time to value with an open, flexible multicloud architecture.
 
   tasks:
-    - title: Create a Project in Cloud Pak for Data
+    - title: Create a project in Cloud Pak for Data
       description: |-
-        ### Create a Project
-        1. Choose Projects > View all projects from the menu and then click New project on the My Projects page.
-        2. Select Analytics project and click OK.
-        3. Add a title and description, then click Create.
+        ### Create a project
+        1. Click **Projects** &#x2192; **View all projects** from the menu.
+        2. Click **New project**.
+        3. Select **Analytics project** and click **OK**.
+        4. Add a title and description, then click **Create**.
       summary:
         success: You have created a new project
         failed: Try the steps again
-    - title: Add Data to your project
+    - title: Add data to your project
       description: |-
-        ### After you create a project, you add data assets to it so that you can work with data
-        1. From your project’s Assets page, click Add to project > Data. 
-        2. In the Load pane that opens, browse for a CSV file or drag it onto the pane.
+        ### After you create a project, add data assets to it so that you can work with data
+        1. From your project’s **Assets** page, click **Add to project** &#x2192; **Data**.
+        2. In the **Load** pane that opens, browse for a CSV file or drag it from your file manager onto the pane.
       summary:
-        success: The files are listed as data assets on the Assets page of your project.
+        success: The files are listed as data assets on the **Assets** page of your project.
         failed: Try the steps again
     - title: Import a notebook into your project
       description: |-
         ### After you have data assets you are ready to import a notebook
-        1. From your project, click Add to Project > Notebook.
-        2. On the New Notebook page, upload a notebook file from your file system, or a URL.
+        1. From your project, click **Add to Project** &#x2192; **Notebook**.
+        2. On the **New Notebook** page, upload a notebook file from your file system, or by using a URL.
         3. Specify the runtime environment for the language you want to use (Python, R, or Scala).
-        4. Click Create Notebook.
+        4. Click **Create Notebook**.
       summary:
         success: The notebook opens in the Jupyter notebook editor.
         failed: Try the steps again
@@ -43,35 +44,35 @@ spec:
       description: |-
         ### After you have a notebook created you can load data into the notebook
         1. Click in an empty code cell in your notebook.
-        2. Click the Find and Add Data icon.
-        3. Click Insert to code > pandas DataFrame right below the data file name.
+        2. Click the **Find and Add Data** icon.
+        3. Click **Insert to code** &#x2192; **pandas DataFrame** right below the data file name.
         4. Run the cell.
       summary:
         success: The data is now loaded into the notebook and you can see a preview of the data. Run the rest of the notebook to train your model.
         failed: Try the steps again
     - title: Train an AutoAI model
       description: |-
-        ### As an alternative to the Notebook, you can build a model with AutoAI
-        1. From the Assets page of your project, click Add to Project >AutoAI experiment.
-        2. Name your experiment, then click Create.
-        3. Upload or add from project the CSV file to train the experiment.
-        4. Choose the prediction column.
+        ### As an alternative to the notebook, you can build a model with AutoAI
+        1. From the **Assets** page of your project, click **Add to Project** &#x2192; **AutoAI experiment**.
+        2. Name your experiment, then click **Create**.
+        3. Upload or add a CSV file from project to train the experiment.
+        4. Select the prediction column.
         5. Run the experiment.
       summary:
         success: You have trained a model with AutoAI.
         failed: Try the steps again
-    - title: Save and Deploy a model
+    - title: Save and deploy a model
       description: |-
         ### After a model is trained with AutoAI, you can deploy it
-        1. After the AutoAI experiment finishes training, choose the best performing pipeline and click Save as model.
-        2. A notification indicates the model is saved. Click the View in project link in the notification to open the model details page.
+        1. After the AutoAI experiment finishes training, select the best performing pipeline and click **Save as model**.
+        2. A notification indicates the model is saved. Click the **View in project** link in the notification to open the model details page.
         3. Create a deployment space, and then promote the model to the deployment space.
         4. Click the link in the success notification to open the model in the deployment space.
-        5. Create and name a new deployment of the model
-        6. When the deployment is ready, click the deployment name and choose Online as the deployment type, assigning a name for the deployment.
+        5. Create and name a new deployment of the model.
+        6. When the deployment is ready, click the deployment name and choose **Online** as the deployment type, assigning a name for the deployment.
         7. When the deployment is ready, click the name to view and test the deployment.
-        8. Click the Test tab and use the form interface to enter test values.
-        9. Click Predict to view the prediction.
+        8. Click the **Test** tab and use the form interface to enter test values.
+        9. Click **Predict** to view the prediction.
       summary:
         success: You have deployed an AutoAI model.
         failed: Try the steps again
