--- a/data/quickstarts/openvino-inference-notebook.yaml
+++ b/data/quickstarts/openvino-inference-notebook.yaml
@@ -20,14 +20,13 @@ spec:
     - title: Launch JupyterHub notebook server
       description: |-
         ### Important considerations
-        1. Use the minimal notebook
-        2. Request a large container size
+        Use the **Minimal Python** notebook with a **Large** container size.
 
       review:
         instructions: |-
           #### Launched JupyterHub notebook server
           Do you have a notebook browser tab?
-        failedTaskHelp: This task isn’t verified yet. Try the task again.
+        failedTaskHelp: This task is not verified yet. Try the task again.
       summary:
         success: You have a notebook server
         failed: Review the "Creating a Jupyter notebook" quick start for additional help.
@@ -35,17 +34,17 @@ spec:
       description: |-
         ### Loading the OpenVINO notebook
         1. Download the "pytorch_onnx_openvino.ipynb" notebook from the [OpenVINO Notebooks repository](https://github.com/openvinotoolkit/openvino_notebooks).
-        2. Upload notebook file "pytorch_onnx_openvino.ipynb" using notebook server file manager.
-        3. Click on the uploaded notebook to launch it in a new browser tab.
+        2. Upload the **pytorch_onnx_openvino.ipynb** notebook file using the JupyterLab file manager.
+        3. Click on the uploaded notebook to launch it in a new JupyterLab tab.
 
       review:
         instructions: |-
           #### Verify that the notebook launched successfully
           Do you have a notebook tab for the OpenVINO notebook in your browser?
         failedTaskHelp:
-          This task isn’t verified yet. Try the task again.
+          This task is not verified yet. Try the task again.
       summary:
         success: You have loaded the example notebook
         failed: Try the steps again.
-  conclusion: You can complete the rest of the quick start inside the notebook itself. Proceed cell by cell, taking care not to skip any. Once you have completed the entire notebook, you will have been exposed to several OpenVINO toolkit fundamentals.
+  conclusion: You can complete the rest of the quick start inside the notebook itself. Proceed cell by cell, taking care not to skip any. Once you have completed the entire notebook, you will have learned about several OpenVINO toolkit fundamentals.
   nextQuickStart: []
