--- a/data/quickstarts/seldon-deploy-drift-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-drift-quickstart.yaml
@@ -2,52 +2,52 @@ kind: ConsoleQuickStart
 metadata:
   name: seldon-deploy-model-drift
 spec:
-  displayName: Monitor drift for deployed model
+  displayName: Monitor a deployed model for drift
   durationMinutes: 10
   icon: 'images/seldon.svg'
-  description: Monitor drift for deployed image classifier model.
+  description: Monitor drift for a deployed image classifier model
   introduction: |-
-    ### This quick start shows you how to launch a tensorflow image classifier model and detect when requests to the model are drifting.
+    ### This quick start shows you how to launch a TensorFlow image classifier model and detect when requests to the model are drifting.
     Seldon Deploy is a specialist set of tools designed to simplify and accelerate the process of deploying and managing your machine learning models.
 
-    This quick start is a short version of https://deploy-master.seldon.io/docs/demos/seldon-core/drift/
+    This quick start is a short version of the Seldon [Drift Detection](https://deploy-master.seldon.io/docs/demos/seldon-core/drift/) tutorial.
   tasks:
     - title: Deploy a pretrained image classifier model
       description: |-
         ### Deploy a pretrained image classifier model
-        1. Open Seldon Console and click create. Deployment creation wizard appears.
-        2. Choose type SeldonDeployment and protocol tensorflow and click next.
-        3. Choose runtime tensorflow and enter the model url gs://seldon-models/tfserving/cifar10/resnet32
-        4. Click through wizard to deploy the model
+        1. Open Seldon Console and click **Create** to open the deployment creation wizard.
+        2. Select the **SeldonDeployment** type and **TensorFlow** protocol and click **Next**.
+        3. Choose the **tensorflow** runtime. Enter the model URL: `gs://seldon-models/tfserving/cifar10/resnet32`
+        4. Click through the wizard to deploy the model.
       summary:
         success: You have deployed a pretrained tensorflow image classifier
-        failed: Try the steps again or see https://deploy-master.seldon.io/docs/demos/seldon-core/drift/
+        failed: Try the steps again or see the Seldon [Drift Detection](https://deploy-master.seldon.io/docs/demos/seldon-core/drift/) tutorial.
     - title: Add a drift detector
       description: |-
         ### Deploy a drift detector for the image classifier
-        1. From the image classifier model's page, go to the drift detector wizard
-        2. Enter the model name cifar10 and url gs://seldon-models/alibi-detect/cd/ks/cifar10-0_4_3 for a drift detector.
-        3. Set the batch size to 2, protocol to tensorflow and port to 8080
-        3. Click through wizard to deploy the drift detector
+        1. From the image classifier model's page, under **Drift Detection**, click **Configure**.
+        2. Enter the model name `cifar10` and the drift detector URL `gs://seldon-models/alibi-detect/cd/ks/cifar10-0_4_3`
+        3. Set the batch size to `2`, the protocol to `tensorflow` and the port to `8080`.
+        3. Click through wizard to deploy the drift detector.
       summary:
         success: The drift detector shows as loaded
-        failed: Try the steps again or see https://deploy-master.seldon.io/docs/demos/seldon-core/drift/
+        failed: Try the steps again or see the Seldon [Drift Detection](https://deploy-master.seldon.io/docs/demos/seldon-core/drift/) tutorial.
     - title: Make predictions
       description: |-
         ### Make predictions:
-        1. Go to the make predictions screen
-        2. Run a single prediction using the tensorflow payload format of an image truck - file is https://deploy.seldon.io/docs/demos/seldon-core/outlier/cifar10_image.json
-        3. Run a prediction payload format of an outlier/perturbed truck - file is https://deploy.seldon.io/docs/demos/seldon-core/outlier/outlier_image.json
+        1. Go to the **Make predictions** screen.
+        2. Run a single prediction for "truck" using CIFAR-10 data in TensorFlow payload format, available here: [https://deploy.seldon.io/docs/demos/seldon-core/outlier/cifar10_image.json](https://deploy.seldon.io/docs/demos/seldon-core/outlier/cifar10_image.json).
+        3. Run a single prediction for truck outliers using CIFAR-10 data in TensorFlow payload format, available here: [https://deploy.seldon.io/docs/demos/seldon-core/outlier/outlier_image.json](https://deploy.seldon.io/docs/demos/seldon-core/outlier/outlier_image.json)
       summary:
-        success: You see ok responses for each of the predictions.
-        failed: Try the steps again or see https://deploy-master.seldon.io/docs/demos/seldon-core/drift/
-    - title: Monitor Drift
+        success: You see OK responses for each of the predictions.
+        failed: Try the steps again or see the Seldon [Drift Detection](https://deploy-master.seldon.io/docs/demos/seldon-core/drift/) tutorial.
+    - title: Monitor drift
       description: |-
-        ### Monitor Drift:
-        1. Go to the monitor section of the deployment
-        2. Under the ‘Monitor’ section of your deployment, you can see a timeline revealing drift of requests
+        ### Monitor drift:
+        1. Go to the **Monitor** section of the deployment.
+        2. Check the timeline to see the drift of requests over time.
       summary:
         success: You see graphs revealing drift of predictions.
-        failed: Try the steps again or see https://deploy-master.seldon.io/docs/demos/seldon-core/drift/
+        failed: Try the steps again or see the Seldon [Drift Detection](https://deploy-master.seldon.io/docs/demos/seldon-core/drift/) tutorial.
   conclusion: You are now able to identify drift in requests sent to the model.
   nextQuickStart: []
