--- a/data/quickstarts/connect-rhosak-notebook-quickstart.yaml
+++ b/data/quickstarts/connect-rhosak-notebook-quickstart.yaml
@@ -3,6 +3,7 @@ metadata:
   name: connect-rhosak-notebook
 spec:
   displayName: Connecting to Red Hat OpenShift Streams for Apache Kafka
+  appName: rhosak
   durationMinutes: 10
   icon: 'images/red-hat.svg'
   description: A quick step-by-step guide to connecting to Red Hat Streams for Apache Kafka from a Jupyter notebook.
