--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "node-gyp": "^7.1.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-cool-dimensions": "^2.0.5",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
