--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "rhods-dashboard-backend",
+  "name": "ods-dashboard-backend",
   "version": "1.0.0",
-  "description": "Backend for the RHODS dashboard.",
-  "author": "Red Hat",
+  "description": "Backend for the ODS dashboard.",
+  "author": "",
   "license": "ISC",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/red-hat-data-services/odh-dashboard.git"
+    "url": "git+https://github.com/opendatahub-io/odh-dashboard.git"
   },
-  "homepage": "https://github.com/red-hat-data-services/odh-dashboard#readme",
+  "homepage": "https://github.com/opendatahub-io/odh-dashboard#readme",
   "bugs": {
-    "url": "https://github.com/red-hat-data-services/odh-dashboard/issues"
+    "url": "https://github.com/opendatahub-io/odh-dashboard/issues"
   },
   "engines": {
     "node": ">=12.0.0"
